Add build field on GameReplay itself as well
Regardless of the server's build, the client build may still differ.
This is rare. We also don't have a way to detect it (yet?), but it's
more correct to store it like this.

--- a/hsreplaynet/templates/games/replay_detail.html
+++ b/hsreplaynet/templates/games/replay_detail.html
@@ -70,7 +70,7 @@
 			replay_xml_url: "{{ replay.replay_xml.url|safe }}",
 		});
 		Raven.setTagsContext({
-			build: "{{ replay.global_game.build }}",
+			build: "{{ replay.build }}",
 		});
 		{% if user.is_authenticated %}
 			Raven.setUserContext({
