--- a/hsreplaynet/templates/games/replay_detail.html
+++ b/hsreplaynet/templates/games/replay_detail.html
@@ -62,22 +62,29 @@
 
 {% setting "JOUST_RAVEN_DSN_PUBLIC" as dsn %}
 {% influx_db "joust" as influx %}
+{% if dsn %}<script src="https://cdn.ravenjs.com/3.2.1/raven.min.js" integrity="sha384-2QcVFMszQztv0f86/rCOPeCZfrHzwGUCpX07J6zefzEtrLNm0n0U4DwzbuhXlDMo" crossorigin="anonymous"></script>{% endif %}
+<script type="text/javascript">
+	if(typeof Raven === "undefined") {
+		var Raven = null;
+	}
+</script>
 {% if dsn %}
-	<script src="https://cdn.ravenjs.com/3.2.1/raven.min.js" integrity="sha384-2QcVFMszQztv0f86/rCOPeCZfrHzwGUCpX07J6zefzEtrLNm0n0U4DwzbuhXlDMo" crossorigin="anonymous"></script>
 	<script type="text/javascript">
-		Raven.config("{{ dsn }}").install();
-		Raven.setExtraContext({
-			replay_xml_url: "{{ replay.replay_xml.url|safe }}",
-		});
-		Raven.setTagsContext({
-			build: "{{ replay.build }}",
-		});
-		{% if user.is_authenticated %}
-			Raven.setUserContext({
-				id: {{ user.id }},
-				username: "{{ user.username }}",
+		if(Raven) {
+			Raven.config("{{ dsn }}").install();
+			Raven.setExtraContext({
+				replay_xml_url: "{{ replay.replay_xml.url|safe }}",
 			});
-		{% endif %}
+			Raven.setTagsContext({
+				build: "{{ replay.build }}",
+			});
+			{% if user.is_authenticated %}
+				Raven.setUserContext({
+					id: {{ user.id }},
+					username: "{{ user.username }}",
+				});
+			{% endif %}
+		}
 	</script>
 {% endif %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react.min.js" integrity="sha384-ICzDcvbNpMy31akJ8WzksHoK9tl1iRIUPRCaBRN+sn/k40TNGjs9IvgPN0SekkDT" crossorigin="anonymous"></script>
@@ -91,18 +98,18 @@
 			hearthstonejson: "{% setting 'HEARTHSTONEJSON_URL' %}",
 			logger: function (message, extra) {
 				{% if dsn %}
-					Raven.captureMessage(message, {level: "warning", extra: extra});
+					Raven && Raven.captureMessage(message, {level: "warning", extra: extra});
 				{% endif %}
 				console.warn(message);
 			}
 		});
-		{% if dsn %}Raven.setRelease(Joust.release());{% endif %}
+		{% if dsn %}Raven && Raven.setRelease(Joust.release());{% endif %}
 		Joust.viewer("joust-container")
 			.metadata(JoustExtra.metadata)
 			.assets("{% joust_static 'assets/' %}")
 			.cardArt("{% joust_static 'card-art/' %}")
 			.logger(function(error) {
-				{% if dsn %}Raven.captureException(error);{% endif %}
+				{% if dsn %}Raven && Raven.captureException(error);{% endif %}
 				var message = error.message ? error.message : error;
 				console.error(message);
 			})
@@ -189,7 +196,7 @@
 	};
 
 	{% if dsn %}
-		if (Raven.wrap) {
+		if (Raven && Raven.wrap) {
 			j = Raven.wrap(j);
 		}
 	{% endif %}
