--- a/hsreplaynet/templates/games/replay_detail.html
+++ b/hsreplaynet/templates/games/replay_detail.html
@@ -26,37 +26,45 @@
 </div>
 
 <div id="replay-details" class="container-fluid">
-	<div class="col-lg-offset-1 col-lg-10 col-xs-12">
-		<h2>Details</h2>
-		{% with replay.global_game as gg %}
-		<p>
-			<ul>
-				<li>Patch {{ gg.build }}</li>
-				<li>{{ gg.num_turns }} turns, {{ gg.num_entities }} entities</li>
-				<li>
-					{{ gg.game_type.name }}
-					{% if gg.ladder_season %}- Season {{ gg.ladder_season }}{% endif %}
-				</li>
-				<li><a href="{{ replay.replay_xml.url }}">Download replay</a></li>
-			</ul>
-		</p>
-		<h3>Players</h3>
-		<p>
-		{% for player in gg.players.all %}
-			<h4>{{ player }}{% if player.is_ai %} (AI){% endif %} ({{ player.final_state.name|title }})</h4>
-			<ul>
-				<li>{% if player.is_first %}First player{% else %}Second player{% endif %}</li>
-				<li>Hero: {{ player.hero }}{% if player.hero_premium %} (Golden){% endif %}</li>
-				<li>Deck: {{ player.deck_list }}</li>
-				{% if player.rank %}
-					<li>Rank {{ player.rank }}{% if player.stars %} {{ player.stars }} stars{% endif %}</li>
-				{% elif player.legend_rank %}
-					<li>Legend rank {{ player.legend_rank }}</li>
-				{% endif %}
-			</ul>
-		{% endfor %}
-		</p>
-		{% endwith %}
+	<div class="row">
+		<div class="col-lg-offset-1 col-lg-10 col-xs-12">
+			{% with replay.global_game as gg %}
+			<div class="row">
+				<div class="col-lg-4 col-xs-12">
+					<h2>Details</h2>
+					<ul>
+						<li>Patch {{ gg.build }}</li>
+						<li>{{ gg.num_turns }} turns, {{ gg.num_entities }} entities</li>
+						<li>
+							{{ gg.game_type.name }}
+							{% if gg.ladder_season %}- Season {{ gg.ladder_season }}{% endif %}
+						</li>
+						<li><a href="{{ replay.replay_xml.url }}">Download replay</a></li>
+					</ul>
+				</div>
+				<div class="col-lg-8 col-xs-12">
+					<h3>Players</h3>
+					<div class="row">
+						{% for player in gg.players.all %}
+							<div class="col-lg-6 col-sm-12">
+								<h4>{{ player }}{% if player.is_ai %} (AI){% endif %} ({{ player.final_state.name|title }})</h4>
+								<ul>
+									<li>{% if player.is_first %}First player{% else %}Second player{% endif %}</li>
+									<li>Hero: {{ player.hero }}{% if player.hero_premium %} (Golden){% endif %}</li>
+									<li>Deck: {{ player.deck_list }}</li>
+									{% if player.rank %}
+										<li>Rank {{ player.rank }}{% if player.stars %} {{ player.stars }} stars{% endif %}</li>
+									{% elif player.legend_rank %}
+										<li>Legend rank {{ player.legend_rank }}</li>
+									{% endif %}
+								</ul>
+							</div>
+						{% endfor %}
+					</div>
+				</div>
+			</div>
+			{% endwith %}
+		</div>
 	</div>
 </div>
 
