Fix replay_detail page

--- a/hsreplaynet/templates/games/replay_detail.html
+++ b/hsreplaynet/templates/games/replay_detail.html
@@ -19,13 +19,10 @@
 
 {% block fullcontent %}
 <div id="tabletop" class="container-fluid">
-	<div class="row">
-		<div class="col-lg-offset-1 col-lg-10 col-xs-12">
-			<h1>{{ replay }}</h1>
+	<div class="row full_height">
+		<div class="col-lg-offset-1 col-lg-10 col-xs-12 full_height">
 			<div class="full_height">
-				<div class="col-lg-offset-1 col-lg-10 col-xs-12 full_height">
-					<div id="joust-container" class="full_height" data-replayurl="{{ replay.replay_xml.url }}"></div>
-				</div>
+				<div id="joust-container" class="full_height" data-replayurl="{{ replay.replay_xml.url }}"></div>
 			</div>
 		</div>
 	</div>
