--- a/hsreplaynet/templates/account/edit.html
+++ b/hsreplaynet/templates/account/edit.html
@@ -1,5 +1,5 @@
 {% extends "account/base.html" %}
-{% load static from staticfiles %}
+{% load static %}
 {% load web_extras %}
 
 {% block content %}
