--- a/hsreplaynet/templates/base.html
+++ b/hsreplaynet/templates/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-{% load static from staticfiles %}
+{% load static %}
 {% load socialaccount %}
 {% load web_extras %}
 <head>
