--- a/hsreplaynet/templates/flatpages/default.html
+++ b/hsreplaynet/templates/flatpages/default.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load static from staticfiles %}
+{% load static %}
 
 {% block content %}
 <article id="flatpage" class="page">
