Move static/web/ files to static/ -> images/, scripts/, styles/

--- a/hsreplaynet/templates/account/edit.html
+++ b/hsreplaynet/templates/account/edit.html
@@ -6,7 +6,7 @@
 
 	<h1>Your account</h1>
 	<p>
-		Signed in as <img src="{% static 'web/images/bnet.png' %}"/> <strong>{{ user }}</strong>.
+		Signed in as <img src="{% static 'images/bnet.png' %}"/> <strong>{{ user }}</strong>.
 	</p>
 
 	<h4>API access</h4>
