--- a/hsreplaynet/templates/account/base.html
+++ b/hsreplaynet/templates/account/base.html
@@ -3,7 +3,7 @@
 
 {% block stylesheets %}
 	{{ block.super }}
-	<link href="{% static 'web/account.css' %}" rel="stylesheet"/>
+	<link href="{% static 'styles/account.css' %}" rel="stylesheet"/>
 {% endblock stylesheets %}
 
 {% block fullcontent %}
