--- a/hsreplaynet/templates/socialaccount/connections.html
+++ b/hsreplaynet/templates/socialaccount/connections.html
@@ -24,7 +24,7 @@
 			<label for="id_account_{{ base_account.id }}">
 				<input id="id_account_{{ base_account.id }}" type="radio" name="account" value="{{ base_account.id }}"/>
 				{% if account.get_brand.id == "battlenet" %}
-					<img src="{% static 'web/images/bnet.png' %}"/>
+					<img src="{% static 'images/bnet.png' %}"/>
 				{% else %}
 					<span class="socialaccount_provider {{ base_account.provider }} {{ account.get_brand.id }}">{{account.get_brand.name}}</span>
 				{% endif %}
