Use local copies of all our JS files instead of CDN ones

--- a/hsreplaynet/templates/games/replay_detail.html
+++ b/hsreplaynet/templates/games/replay_detail.html
@@ -91,7 +91,7 @@
 
 {% setting "JOUST_RAVEN_DSN_PUBLIC" as dsn %}
 {% influx_db "joust" as influx %}
-{% if dsn %}<script src="https://cdn.ravenjs.com/3.2.1/raven.min.js" integrity="sha384-2QcVFMszQztv0f86/rCOPeCZfrHzwGUCpX07J6zefzEtrLNm0n0U4DwzbuhXlDMo" crossorigin="anonymous"></script>{% endif %}
+{% if dsn %}<script src="{% static 'vendor/raven.min.js' %}"></script>{% endif %}
 <script type="text/javascript">
 	if(typeof Raven === "undefined") {
 		var Raven = null;
@@ -116,11 +116,11 @@
 		}
 	</script>
 {% endif %}
-<script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react.min.js" integrity="sha384-ICzDcvbNpMy31akJ8WzksHoK9tl1iRIUPRCaBRN+sn/k40TNGjs9IvgPN0SekkDT" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react-dom.min.js" integrity="sha384-1dLXeik7kFcDPXbz3rX9dibLTGh/D8dpAOL5X2Ml09pH8wpQlpL+JOgOnzAMCO4T" crossorigin="anonymous"></script>
+<script src="{% static 'vendor/react.min.js' %}"></script>
+<script src="{% static 'vendor/react-dom.min.js' %}"></script>
 <script src="{% static 'scripts/joust-extra.js' %}"></script>
 <script src="{% joust_static 'joust.js' %}"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.12/clipboard.min.js" integrity="sha384-zD0rXhmVlFWUQYNE6qhnghclEAj+YgdpXMO/izgNBWhg9CZTYfQx/LlgPCUfSH7V" crossorigin="anonymous"></script>
+<script src="{% static 'vendor/clipboard.min.js' %}"></script>
 <script type="text/javascript">
 	new Clipboard("#replay-share-copy-url");
 
