--- a/hsreplaynet/templates/base.html
+++ b/hsreplaynet/templates/base.html
@@ -24,7 +24,7 @@
 	{% endblock stylesheets %}
 
 	<link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.ico' %}"/>
-	<script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+	<script type="text/javascript" src="{% static 'vendor/jquery.min.js' %}"></script>
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
