--- a/hsreplaynet/templates/base.html
+++ b/hsreplaynet/templates/base.html
@@ -25,6 +25,8 @@
 
 	<link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.ico' %}"/>
 	<script type="text/javascript" src="{% static 'vendor/jquery.min.js' %}"></script>
+	<script type="text/javascript" src="{% static 'vendor/react.min.js' %}"></script>
+	<script type="text/javascript" src="{% static 'vendor/react-dom.min.js' %}"></script>
 </head>
 <body>
 	<header>
