--- a/hsreplaynet/static/styles/base.scss
+++ b/hsreplaynet/static/styles/base.scss
@@ -28,7 +28,7 @@ body, html {
 	margin: 0;
 	padding: 0;
 	height: 100%;
-	font-family: 'Noto Sans', sans-serif;
+	font-family: "Noto Sans", sans-serif;
 }
 
 #content {
