--- a/hsreplaynet/templates/base.html
+++ b/hsreplaynet/templates/base.html
@@ -18,9 +18,7 @@
 	{% block stylesheets %}
 		<link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
 		<link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
-		<!-- base.css should come after all Bootstrap CSS -->
-		<link href="{% static 'styles/base.css' %}" rel="stylesheet"/>
-		<link href="{% static 'styles/my_replays.css' %}" rel="stylesheet"/>
+		<link href="{% static 'styles/main.css' %}" rel="stylesheet"/>
 	{% endblock stylesheets %}
 
 	<link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.ico' %}"/>
