Share Dialog: Add some options to the component

--- a/hsreplaynet/templates/games/replay_detail.html
+++ b/hsreplaynet/templates/games/replay_detail.html
@@ -107,7 +107,7 @@
 <script src="{% joust_static 'joust.js' %}"></script>
 <script type="text/javascript">
 	var joustEvents = [];
-	var onJoustTurn = null;
+	var onJoustSetting = function(a, b, c) {};
 	var j = function() {
 		JoustExtra.setup({
 			hearthstonejson: "{% setting 'HEARTHSTONEJSON_URL' %}",
@@ -154,15 +154,27 @@
 			})
 			{% endif %}
 			.onTurn(function(turn) {
-				if(onJoustTurn) {
-					onJoustTurn(turn);
-				}
+				onJoustSetting(turn);
+			})
+			.onToggleReveal(function(reveal) {
+				onJoustSetting(undefined, reveal);
+			})
+			.onToggleSwap(function(swap) {
+				onJoustSetting(undefined, undefined, swap);
 			});
 
 		if(location.hash) {
-			var ret = location.hash.match(/#turn=(\d+)(a|b)/);
+			var ret = location.hash.match(/turn=(\d+)(a|b)/);
 			if(ret) {
-				launcher.turn(+(ret[1] * 2) + (+(ret[2] == "b")) - 1);
+				launcher.startAtTurn(+(ret[1] * 2) + (+(ret[2] == "b")) - 1);
+			}
+			ret = location.hash.match(/reveal=(0|1)/);
+			if(ret) {
+				launcher.startRevealed(ret[1] == 1);
+			}
+			ret = location.hash.match(/swap=(0|1)/);
+			if(ret) {
+				launcher.startSwapped(ret[1] == 1);
 			}
 		}
 
