--- a/hsreplaynet/templates/error.html
+++ b/hsreplaynet/templates/error.html
@@ -1,9 +1,10 @@
 {% load static %}
 <!DOCTYPE html>
+{% spaceless %}
 <html>
 <head>
 <meta charset="utf-8"/>
-<title>Not found :(</title>
+<title>{{ error_name }} :(</title>
 <style type="text/css">
 * {
 	margin: 0;
@@ -39,12 +40,13 @@ p {
 </head>
 <body>
 	<a href="{% url 'home' %}"><img src="{% static 'images/logo.png' %}" alt="HSReplay.net"></a>
-	<h4>404.</h4>
+	<h4>{{ error_code }}</h4>
 	<p>
-		That's a lot more than 200.
+		{{ error_desc }}
 	</p>
 	<p>
 		<a href="{% url 'home' %}">Back to the office.</a>
 	</p>
 </body>
 </html>
+{% endspaceless %}
