--- a/hsreplaynet/templates/error.html
+++ b/hsreplaynet/templates/error.html
@@ -5,6 +5,7 @@
 <head>
 <meta charset="utf-8"/>
 <title>{{ error_name }} :(</title>
+<base href="https://hsreplay.net"/>
 <style type="text/css">
 * {
 	margin: 0;
