--- a/hsreplaynet/templates/base.html
+++ b/hsreplaynet/templates/base.html
@@ -4,6 +4,7 @@
 {% load socialaccount %}
 {% load web_extras %}
 <head>
+	{% block head %}
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -25,6 +26,7 @@
 	<script type="text/javascript" src="{% static 'vendor/jquery.min.js' %}"></script>
 	<script type="text/javascript" src="{% static 'vendor/react.min.js' %}"></script>
 	<script type="text/javascript" src="{% static 'vendor/react-dom.min.js' %}"></script>
+	{% endblock %}
 </head>
 <body>
 	<header>
