--- a/hsreplaynet/templates/uploads/processing.html
+++ b/hsreplaynet/templates/uploads/processing.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block head %}
+	{{ block.super }}
+	<meta http-equiv="refresh" content="3"/>
+{% endblock %}
+
 {% block content %}
 
 <p class="upload-status-message upload-{{ upload.status.name|lower }}">
