Add optional Google Analytics code block (not served with DNT)

--- a/hsreplaynet/templates/base.html
+++ b/hsreplaynet/templates/base.html
@@ -108,5 +108,9 @@
 		{% endif %}
 	{% endblock %}
 	</footer>
+
+{% block analytics %}
+	{% include "analytics.html" %}
+{% endblock %}
 </body>
 </html>
